--- a/src/components/Share.astro
+++ b/src/components/Share.astro
@@ -1,37 +1,37 @@
 ---
-import { siteConfig } from '@/data/site.config'
-import TwitterColorIcon from './icons/TwitterColorIcon.astro'
-import LinkedinIcon from './icons/linkedinIcon.astro'
-import FaceBookIcon from './icons/FaceBookIcon.astro'
-const message = siteConfig.shareMessage
+import { siteConfig } from "@/data/site.config";
+import TwitterColorIcon from "./icons/TwitterColorIcon.astro";
+import LinkedinIcon from "./icons/linkedinIcon.astro";
+import FaceBookIcon from "./icons/FaceBookIcon.astro";
+const message = siteConfig.shareMessage;
 
-const URL = Astro.url.href
+const URL = Astro.url.href;
 ---
 
-<div class='flex flex-col gap-2'>
-	<span class='mb-1 font-bold text-2xl'>Share</span>
-	<ul class='flex gap-3 text-black dark:text-white'>
-		<li>
-			<a
-				href={`https://twitter.com/intent/tweet?text=${message + ' ' + URL}`}
-				aria-label='Share on Twitter'><TwitterColorIcon /></a
-			>
-		</li>
-		<li>
-			<a
-				href={`https://www.linkedin.com/shareArticle?mini=true&url=${URL}`}
-				aria-label='Share on LinkedIn'
-			>
-				<LinkedinIcon /></a
-			>
-		</li>
-		<li>
-			<a
-				href={`https://www.facebook.com/sharer/sharer.php?u=${URL}`}
-				aria-label='Share on facebook'
-			>
-				<FaceBookIcon /></a
-			>
-		</li>
-	</ul>
+<div class="flex flex-col gap-2">
+  <span class="mb-1 font-bold text-2xl">Share</span>
+  <ul class="flex gap-3 text-black dark:text-white">
+    <li>
+      <a
+        href={`https://twitter.com/intent/tweet?text=${message + " " + URL}`}
+        aria-label="Share on Twitter"><TwitterColorIcon /></a
+      >
+    </li>
+    <li>
+      <a
+        href={`https://www.linkedin.com/shareArticle?mini=true&url=${URL}`}
+        aria-label="Share on LinkedIn"
+      >
+        <LinkedinIcon /></a
+      >
+    </li>
+    <li>
+      <a
+        href={`https://www.facebook.com/sharer/sharer.php?u=${URL}`}
+        aria-label="Share on facebook"
+      >
+        <FaceBookIcon /></a
+      >
+    </li>
+  </ul>
 </div>
