--- a/src/pages/tags/[...tag]/index.astro
+++ b/src/pages/tags/[...tag]/index.astro
@@ -1,25 +1,25 @@
 ---
-import BaseLayout from '@/layouts/BaseLayout'
-import ListPosts from '@/components/ListPosts'
-import TitlePage from '@/components/TitlePage'
-import { getTags, getPostByTag } from '@/utils'
+import BaseLayout from "@/layouts/BaseLayout";
+import ListPosts from "@/components/ListPosts";
+import TitlePage from "@/components/TitlePage";
+import { getTags, getPostByTag } from "@/utils";
 
 export async function getStaticPaths() {
-	const tags = await getTags()
+  const tags = await getTags();
 
-	return tags.map((tag) => ({
-		params: { tag },
-		props: { tag }
-	}))
+  return tags.map((tag) => ({
+    params: { tag },
+    props: { tag },
+  }));
 }
 
-const { tag } = Astro.props
+const { tag } = Astro.props;
 
-const posts = await getPostByTag(tag)
-export const prerender = true
+const posts = await getPostByTag(tag);
+export const prerender = true;
 ---
 
 <BaseLayout title={tag}>
-	<TitlePage title={tag} />
-	<ListPosts posts={posts} />
+  <TitlePage title={tag} />
+  <ListPosts posts={posts} />
 </BaseLayout>
